# indexd-utils

./: README.md  go.mod  go.sum
.github/: dependabot.yml
.github/workflows/: go-test.yml  publish.yml
cmd/junkd/: Dockerfile
junkd/: Dockerfile  go.mod  go.sum  main.go
upload-rs/: Cargo.toml
upload-rs/src/: main.rs
