[package]
name = "upload-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
blake2b_simd = "1.0.3"
bytes = "1.10.1"
indexd = { git="https://github.com/SiaFoundation/sia-sdk-rs.git", rev="7247bb71d7c5efc93e90557046185e73e80698e3" }
log = "0.4.27"
pretty_env_logger = "0.5.0"
rand = "0.9.2"
rustls = { version = "0.23.31", features = ["ring"] }
rustls-platform-verifier = "0.6.1"
sia_sdk = { git="https://github.com/SiaFoundation/sia-sdk-rs.git", rev="7247bb71d7c5efc93e90557046185e73e80698e3", features=["quic"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "rt", "rt-multi-thread"] }
url = "2.5.7"
